feat: 구글캘린더 api 연동 및  중요도 토글 기능 추가(미완)

--- a/calendar.html
+++ b/calendar.html
@@ -106,6 +106,14 @@
             </button>
         </main>
     </div>
+    <div id="googleLinkModal" class="modal-overlay">
+  <div class="modal-content">
+    <button id="closeModalBtn" class="modal-close-btn">&times;</button>
+    <h3>Google 계정 연동 필요</h3>
+    <p>캘린더 일정을 불러오려면 Google 계정 연동이 필요합니다. 지금 연동하시겠습니까?</p>
+    <button id="conn-google-btn" class="cta-btn">Google 계정 연동하기</button>
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- JavaScript 파일 로드 -->
     <script src="static/js/app.js"></script>
