--- a/recordSetting.html
+++ b/recordSetting.html
@@ -89,18 +89,7 @@
               <button class="add-participant-btn">추가</button>
             </div>
 
-            <div class="participants-list">
-              <div class="participant-item">
-                <div class="participant-avatar">홍</div>
-                <span class="participant-name">홍길동</span>
-                <button class="remove-participant-btn">✕</button>
-              </div>
-              <div class="participant-item">
-                <div class="participant-avatar">김</div>
-                <span class="participant-name">김영희</span>
-                <button class="remove-participant-btn">✕</button>
-              </div>
-            </div>
+            <div class="participants-list"></div>
           </div>
 
           <!-- 키워드 -->
@@ -120,14 +109,10 @@
             </div>
 
             <div class="keywords-list">
-              <span class="keyword-tag">
+              <!-- <span class="keyword-tag">
                 예산
                 <button class="remove-keyword-btn">✕</button>
-              </span>
-              <span class="keyword-tag">
-                마감일
-                <button class="remove-keyword-btn">✕</button>
-              </span>
+              </span> -->
             </div>
           </div>
 
