--- a/recording.html
+++ b/recording.html
@@ -64,35 +64,13 @@
 
             <div class="transcript-content" id="transcriptContent">
               <!-- 발화 블록 동적 생성 -->
-              <div class="transcript-item">
+              <!-- <div class="transcript-item">
                 <div class="transcript-meta">
-                  <span class="speaker-name">홍길동</span>
-                  <span class="transcript-time">00:01:23</span>
+                  <span class="transcript-time"></span>
                 </div>
                 <div class="transcript-text">
-                  안녕하세요, 오늘 회의를 시작하겠습니다. 이번 프로젝트의 주요 목표와 일정에 대해 논의하려고 합니다.
                 </div>
-              </div>
-
-              <div class="transcript-item">
-                <div class="transcript-meta">
-                  <span class="speaker-name">김영희</span>
-                  <span class="transcript-time">00:01:45</span>
-                </div>
-                <div class="transcript-text">
-                  네, 좋습니다. 먼저 <mark class="keyword-highlight">예산</mark> 부분부터 검토하면 좋을 것 같습니다. <mark class="keyword-highlight">마감일</mark>도 확인해야 할 것 같고요.
-                </div>
-              </div>
-
-              <div class="transcript-item">
-                <div class="transcript-meta">
-                  <span class="speaker-name">홍길동</span>
-                  <span class="transcript-time">00:02:08</span>
-                </div>
-                <div class="transcript-text">
-                  그렇습니다. 예산은 약 5천만원 정도로 책정되어 있고, 마감일은 다음 달 말까지입니다.
-                </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -119,12 +97,12 @@
 
                   <div class="info-item">
                     <label>회의 일시</label>
-                    <p id="meetingDate">2025년 10월 10일 14:00</p>
+                    <p id="meetingDate"></p>
                   </div>
 
                   <div class="info-item" id="descriptionSection">
                     <label>회의 설명</label>
-                    <p id="meetingDescription">-</p>
+                    <p id="meetingDescription"></p>
                   </div>
                 </div>
               </div>
@@ -143,16 +121,8 @@
                 <div class="participants-grid collapsible-content" id="participantsList">
                   <!-- 동적 생성 -->
                   <div class="participant-chip">
-                    <div class="participant-avatar-mini">홍</div>
-                    <span>홍길동</span>
-                  </div>
-                  <div class="participant-chip">
-                    <div class="participant-avatar-mini">김</div>
-                    <span>김영희</span>
-                  </div>
-                  <div class="participant-chip">
-                    <div class="participant-avatar-mini">이</div>
-                    <span>이철수</span>
+                    <div class="participant-avatar-mini"></div>
+                    <span></span>
                   </div>
                 </div>
               </div>
@@ -170,11 +140,7 @@
                 </div>
                 <div class="keywords-display collapsible-content" id="keywordsList">
                   <!-- 동적 생성 -->
-                  <span class="keyword-chip">예산</span>
-                  <span class="keyword-chip">마감일</span>
-                  <span class="keyword-chip">일정</span>
-                  <span class="keyword-chip">프로젝트</span>
-                  <span class="keyword-chip">목표</span>
+                  <span class="keyword-chip"></span>
                 </div>
               </div>
             </div>
